Add simulation mode with dynamic arena scaling and UI indicators
- Add simulation mode that scales bots 10→1000→10 over configurable cycle
- Implement smooth arena scaling based on player count:
  - Grow: fast and immediate (5% lerp)
  - Shrink: 5 second delay, then slow (0.5% lerp)
  - Never shrink below 2000 minimum
- Add arena metrics to Prometheus (radius, gravity wells, simulation status)
- Add arena/simulation section to Grafana dashboard
- Add universe scale and zoom indicators to client UI (left of minimap)
- Spawn bots one at a time to simulate natural player joins
- Preserve existing gravity wells during scaling (never regenerate)

--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -74,6 +74,12 @@ ENV HOST=0.0.0.0
 ENV PORT=4433
 ENV METRICS_PORT=9090
 
+# Simulation mode (load testing) - set SIMULATION_MODE=true to enable
+# SIMULATION_MODE=false        # Enable sinusoidal bot scaling
+# SIMULATION_MIN_BOTS=5        # Minimum bots at cycle trough
+# SIMULATION_MAX_BOTS=100      # Maximum bots at cycle peak
+# SIMULATION_CYCLE_MINUTES=5   # Duration of one min→max→min cycle
+
 # Expose ports
 EXPOSE 4433/udp
 EXPOSE 9090
