--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 # Orbit Royale - Docker Compose with Resource Limits and Monitoring
 # Usage:
 #   docker-compose up -d              # Start all services
@@ -27,6 +25,11 @@ services:
       - PORT=4433
       - METRICS_PORT=9090
       - BOT_COUNT=20
+      # Simulation mode (load testing)
+      - SIMULATION_MODE=true
+      - SIMULATION_MIN_BOTS=10
+      - SIMULATION_MAX_BOTS=1000
+      - SIMULATION_CYCLE_MINUTES=10
     volumes:
       - api-certs:/app/certs
     networks:
