--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,10 +26,20 @@ services:
       - METRICS_PORT=9090
       - BOT_COUNT=20
       # Simulation mode (load testing)
-      - SIMULATION_MODE=true
-      - SIMULATION_MIN_BOTS=10
-      - SIMULATION_MAX_BOTS=1000
-      - SIMULATION_CYCLE_MINUTES=10
+      # - SIMULATION_MODE=true
+      # - SIMULATION_MIN_BOTS=10
+      # - SIMULATION_MAX_BOTS=3000
+      # - SIMULATION_CYCLE_MINUTES=10
+      #
+      # Gravity wave explosions (wells randomly explode creating shockwaves)
+      # - GRAVITY_WAVE_ENABLED=true          # Master switch (true/false)
+      # - GRAVITY_WAVE_SPEED=300             # Wave expansion speed (units/sec)
+      # - GRAVITY_WAVE_FRONT_THICKNESS=80    # Thickness of push zone (units)
+      # - GRAVITY_WAVE_BASE_IMPULSE=180      # Knockback force applied to players
+      # - GRAVITY_WAVE_MAX_RADIUS=2000       # Max radius before wave despawns
+      # - GRAVITY_WAVE_CHARGE_DURATION=2     # Warning duration before explosion (sec)
+      # - GRAVITY_WAVE_MIN_DELAY=30          # Minimum time between explosions (sec)
+      # - GRAVITY_WAVE_MAX_DELAY=90          # Maximum time between explosions (sec)
     volumes:
       - api-certs:/app/certs
     networks:
@@ -70,7 +80,8 @@ services:
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
-      - '--storage.tsdb.retention.time=7d'
+      - '--storage.tsdb.retention.time=1d'      # Keep 1 day (dev/testing)
+      - '--storage.tsdb.retention.size=500MB'   # Hard cap at 500MB
       - '--web.enable-lifecycle'
       - '--web.enable-admin-api'
     networks:
