Add collectible debris system with physics and gravity wave interactions
- Add zone-based debris spawning with configurable rates (inner/middle/outer)
- Add debris to network protocol with AOI filtering
- Add client-side debris rendering with batch drawing for performance
- Add debris lifetime decay (90s default) and out-of-bounds cleanup
- Add gravity wave impulse to debris (70%) and projectiles (50%)
- Add out-of-bounds cleanup for projectiles beyond escape radius

--- a/api/.env.example
+++ b/api/.env.example
@@ -100,3 +100,43 @@ GRAVITY_WAVE_MIN_DELAY=30
 # Maximum time between explosions per well (seconds)
 # Random delay chosen between MIN and MAX
 GRAVITY_WAVE_MAX_DELAY=90
+
+# =============================================================================
+# DEBRIS SPAWNING
+# =============================================================================
+# Collectible particles that players can consume for mass
+# Debris spawns across three zones: inner (near gravity wells), middle, outer
+
+# Master switch - enable/disable debris spawning
+DEBRIS_SPAWN_ENABLED=true
+
+# Maximum debris particles in the game at once
+# Higher = more crowded, but impacts performance
+DEBRIS_MAX_COUNT=200
+
+# Initial debris spawned at game start per zone
+DEBRIS_INITIAL_INNER=50
+DEBRIS_INITIAL_MIDDLE=40
+DEBRIS_INITIAL_OUTER=30
+
+# Spawn rates per second for SMALL debris (5 mass each)
+# Inner zone has highest spawn rate (more activity near wells)
+DEBRIS_SPAWN_RATE_INNER_SMALL=2.0
+DEBRIS_SPAWN_RATE_MIDDLE_SMALL=1.0
+DEBRIS_SPAWN_RATE_OUTER_SMALL=0.5
+
+# Spawn rates per second for MEDIUM debris (15 mass each)
+DEBRIS_SPAWN_RATE_INNER_MEDIUM=0.5
+DEBRIS_SPAWN_RATE_MIDDLE_MEDIUM=0.3
+DEBRIS_SPAWN_RATE_OUTER_MEDIUM=0.1
+
+# Spawn rates per second for LARGE debris (30 mass each)
+# Large debris is rare but very valuable
+DEBRIS_SPAWN_RATE_INNER_LARGE=0.1
+DEBRIS_SPAWN_RATE_MIDDLE_LARGE=0.05
+DEBRIS_SPAWN_RATE_OUTER_LARGE=0.02
+
+# Orbital velocity range for spawned debris (units/second)
+# Debris orbits naturally around gravity wells
+DEBRIS_ORBITAL_VELOCITY_MIN=10
+DEBRIS_ORBITAL_VELOCITY_MAX=30
