Update Docker configs with simulation and metrics
- Enable simulation mode by default for testing
- Add debris spawning config documentation
- Fix container ID labels in Grafana dashboards
- Add short_id extraction in Prometheus for readability

--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -38,3 +38,10 @@ scrape_configs:
     static_configs:
       - targets: ['cadvisor:8080']
     scrape_interval: 5s
+    # Extract short container ID for easier identification
+    # Run `docker ps` to map IDs to names
+    metric_relabel_configs:
+      - source_labels: [id]
+        regex: '/docker/([a-f0-9]{12}).*'
+        target_label: short_id
+        replacement: '${1}'
