--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,12 +24,12 @@ services:
       - HOST=0.0.0.0
       - PORT=4433
       - METRICS_PORT=9090
-      - BOT_COUNT=20
+      - BOT_COUNT=500
       # Simulation mode (load testing)
-      # - SIMULATION_MODE=true
-      # - SIMULATION_MIN_BOTS=10
-      # - SIMULATION_MAX_BOTS=3000
-      # - SIMULATION_CYCLE_MINUTES=10
+      - SIMULATION_MODE=true
+      - SIMULATION_MIN_BOTS=10
+      - SIMULATION_MAX_BOTS=500
+      - SIMULATION_CYCLE_MINUTES=10
       #
       # Gravity wave explosions (wells randomly explode creating shockwaves)
       # - GRAVITY_WAVE_ENABLED=true          # Master switch (true/false)
@@ -40,6 +40,16 @@ services:
       # - GRAVITY_WAVE_CHARGE_DURATION=2     # Warning duration before explosion (sec)
       # - GRAVITY_WAVE_MIN_DELAY=30          # Minimum time between explosions (sec)
       # - GRAVITY_WAVE_MAX_DELAY=90          # Maximum time between explosions (sec)
+      #
+      # Debris spawning (collectible particles that give mass)
+      # - DEBRIS_SPAWN_ENABLED=true          # Master switch (true/false)
+      # - DEBRIS_MAX_COUNT=200               # Maximum debris particles in game
+      # - DEBRIS_INITIAL_INNER=50            # Initial debris in inner zone
+      # - DEBRIS_INITIAL_MIDDLE=40           # Initial debris in middle zone
+      # - DEBRIS_INITIAL_OUTER=30            # Initial debris in outer zone
+      # - DEBRIS_SPAWN_RATE_INNER_SMALL=2.0  # Small debris per second in inner zone
+      # - DEBRIS_SPAWN_RATE_MIDDLE_SMALL=1.0 # Small debris per second in middle zone
+      # - DEBRIS_SPAWN_RATE_OUTER_SMALL=0.5  # Small debris per second in outer zone
     volumes:
       - api-certs:/app/certs
     networks:
