Add AI Simulation Manager for autonomous parameter tuning
Implements a Claude-powered AI manager that monitors game metrics and
autonomously adjusts simulation parameters for optimal performance.

Features:
- ENV-configurable arena scaling (20+ parameters via ARENA_* vars)
- AI manager with Claude API integration (ORBIT_API_KEY)
- Decision history with persistence (data/ai_decisions.json)
- 20% max change limit per adjustment for safety
- Parameter value clamping to safe ranges
- Prometheus metrics for AI manager (decisions, success rate, confidence)
- Grafana dashboard panels for monitoring

Security:
- API key loaded from env, never logged
- 10MB file size limit for history
- Allowlist validation for parameter names
- HTTPS-only API communication

Performance:
- Runs in separate tokio task (non-blocking)
- Uses parking_lot RwLock for minimal contention
- Atomic counters with Relaxed ordering
- Bounded memory (max 100 decisions by default)

All 431 tests pass.

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -23,6 +23,9 @@ metrics_extended = []
 # Advanced physics: momentum-based collision, kinetic energy calculations
 advanced_physics = []
 
+# AI Simulation Manager: autonomous parameter tuning via Claude API
+ai_manager = ["reqwest", "chrono"]
+
 # Minimal build without optional features (for testing/debugging)
 minimal = []
 
@@ -56,6 +59,11 @@ base64 = "0.22"
 # Error handling
 thiserror = "2.0"
 anyhow = "1.0"
+
+# AI Manager dependencies
+reqwest = { version = "0.12", features = ["json"], optional = true }
+chrono = { version = "0.4", features = ["serde"], optional = true }
+serde_json = "1.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
