--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -50,6 +50,7 @@ rayon = "1.10"
 parking_lot = "0.12"
 hashbrown = { version = "0.15", features = ["serde", "rayon"] }
 crossbeam-channel = "0.5"
+bitvec = "1.0"
 
 # TLS (required by wtransport)
 rcgen = "0.14"
