--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,16 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@vitest/ui": "^4.0.16",
+    "jsdom": "^27.3.0",
     "typescript": "^5.9.3",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vitest": "^4.0.16"
   }
 }
