Implement server-side performance optimizations
Key optimizations:
- Thread-local buffers to avoid per-call allocations:
  - Density grid calculation (protocol.rs)
  - Notable players sorting (protocol.rs)
  - AOI filtering with SmallVec for top players (aoi.rs)
  - Collision pair queries (spatial.rs)

- FxHashMap for faster hashing with small integer keys:
  - Gravity well ID lookups (gravity.rs)
  - Player input buffering (game_loop.rs)

- SmallVec for inline storage of small collections:
  - Player inputs (game_loop.rs, up to 4 inline)
  - Top player IDs in AOI (aoi.rs, up to 8 inline)

- Pre-computed squared radius to avoid sqrt in distance checks (aoi.rs)

- Spectator snapshot caching:
  - Pre-compute AOI snapshots for bots with spectator followers
  - O(M) instead of O(N×M) for N spectators, M bots

- Buffer pool scaling based on expected connection count (game_session.rs)

All 599 tests pass with no regressions.

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -51,6 +51,8 @@ parking_lot = "0.12"
 hashbrown = { version = "0.15", features = ["serde", "rayon"] }
 crossbeam-channel = "0.5"
 bitvec = "1.0"
+rustc-hash = "2.1"  # FxHasher - faster hash for small keys (used in gravity calculations)
+smallvec = "1.13"   # SmallVec - inline storage for small collections (input buffering)
 
 # TLS (required by wtransport)
 rcgen = "0.14"
