Add spectator Join Game UI and fix test TypeScript errors
Features:
- Add spectator HUD overlay with Join Game button (Screens.ts)
- Add color picker in spectator mode to select color before joining
- Wire up onSpectatorModeChange event for UI visibility (Game.ts)
- Add spectator metrics to Grafana dashboard (metrics.rs, game_session.rs)

Test fixes:
- Fix Game.test.ts: Remove unused Vec2 import, fix mockCtx type
- Fix World.test.ts: Use Vec2 instances, remove echoClientTime
- Fix Codec.test.ts: Pack player flags correctly, remove unused imports
- Fix StateSync.test.ts: Remove unused BOOST import
- Fix InputSystem.test.ts: Remove unused Vec2 import
- Fix RenderSystem.test.ts: Fix velocity type narrowing issue
- Fix Constants.test.ts: Remove unused index parameter

All 549 tests pass, TypeScript compiles cleanly.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "4433:4433/udp"   # WebTransport (QUIC/UDP)
       - "9090:9090"        # Metrics endpoint
     environment:
-      - RUST_LOG=debug
+      - RUST_LOG=info
       - HOST=0.0.0.0
       - PORT=4433
       - METRICS_PORT=9090
