Add gradual bot spawning to prevent startup CPU spikes
Previously all bots spawned instantly at server start, causing potential
CPU spikes. Now bots spawn gradually:

- Default 3 bots/tick (90/sec at 30 TPS) → 500 bots in ~5.5 seconds
- Spawn rate adapts to performance: full at Excellent/Good, half at
  Warning, 1 at Critical/Catastrophic
- Logs progress at 20%, 40%, 60%, 80%, 100%
- Configurable via BOT_SPAWN_RATE env var (1-20)

This allows adaptive systems (dormancy, arena scaling) to adjust
smoothly without overload during startup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,11 @@ services:
       - PORT=4433
       - METRICS_PORT=9090
       - BOT_COUNT=500
+      # Bot spawn rate during startup (bots per tick, 1-20)
+      # Default 3 = 90 bots/sec at 30 TPS, 500 bots spawned in ~5.5 seconds
+      # Bots spawn gradually to prevent CPU spikes on server start
+      # - BOT_SPAWN_RATE=3
+      #
       # Simulation mode (load testing) - disabled for stable benchmarking
       - SIMULATION_MODE=false
       - SIMULATION_MIN_BOTS=150
